css/PopoverMenu.css
.chata-popover-wrapper{
    background: var(--autoql-vanilla-background-color-primary);
    position: absolute;
    top: 40px;
    left: -205px;
    right: 0;
    z-index: 9999;
    border: 1px solid hsla(0,0%,67.1%,.32);
    border-radius: 4px;
    box-shadow: 0 0 8px rgba(0,0,0,.15);
    opacity: 0;
    visibility: hidden;
    transition: opacity .2s ease 0s!important;
    display: none;
}

.chata-popover-single-message{
    left: 0 !important;
    right: -205px;
}

.chata-popover-wrapper.report-problem{
    left: -140px;
}

.chata-popover-wrapper.show{
    opacity: 1;
    visibility: visible;
    display: block;
}

.chata-popover-wrapper.up-table{
    top: -165px;
}

.chata-popover-wrapper.up-chart{
    top: -130px;
    left: -122px;
}

.chata-popover-wrapper.up-table-single{
    top: -92px;
}


.autoql-vanilla-chat-message-toolbar.show{
    display: block;
}

.more-options-icon svg path{
    fill: unset;
}


.chata-more-options-menu, .report-problem-menu {
    background: var(--autoql-vanilla-background-color-primary);
    padding: 10px 0;
}

 .chata-menu-list {
    list-style-type: none;
    width: 100%;
    margin: 0;
    padding: 0;
}

.chata-more-options-menu .chata-menu-list li{
    color: var(--autoql-vanilla-text-color-primary);
    width: 100%;
    height: 35px;
    line-height: 35px;
    padding: 0 20px;
    cursor: pointer;
    font-size: 13px !important;
}

.chata-more-options-menu .chata-menu-list li:hover {
    background: rgba(0,0,0,.05);
}

